--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -34,6 +34,9 @@ jobs:
     needs: test
     # Only run on push to master/main, not on PRs
     if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
+    strategy:
+      matrix:
+        package: ['.', 'client', 'mobile']
     steps:
       - uses: actions/checkout@v4
 
@@ -42,16 +45,20 @@ jobs:
           node-version: '24'
           registry-url: 'https://registry.npmjs.org'
 
-      - run: npm ci
-      - run: npm run build --if-present
+      - name: Setup and build package
+        run: |
+          cd ${{ matrix.package }}
+          npm ci
+          npm run build --if-present
 
       - name: Check if version already published
         id: check-version
         run: |
+          cd ${{ matrix.package }}
           PACKAGE_NAME=$(node -p "require('./package.json').name")
           PACKAGE_VERSION=$(node -p "require('./package.json').version")
 
-          echo "Package: $PACKAGE_NAME@$PACKAGE_VERSION"
+          echo "Package (${{ matrix.package }}): $PACKAGE_NAME@$PACKAGE_VERSION"
 
           # Check if this version exists on npm
           if npm view "$PACKAGE_NAME@$PACKAGE_VERSION" version 2>/dev/null; then
@@ -64,8 +71,10 @@ jobs:
 
       - name: Publish to npm
         if: steps.check-version.outputs.should_publish == 'true'
-        run: npm publish
+        run: |
+          cd ${{ matrix.package }}
+          npm publish
 
       - name: Skip publishing
         if: steps.check-version.outputs.should_publish == 'false'
-        run: echo "Skipping publish - version already exists on npm"
+        run: echo "Skipping publish (${{ matrix.package }}) - version already exists on npm"
