--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -34,9 +34,6 @@ jobs:
     needs: test
     # Only run on push to master/main, not on PRs
     if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
-    strategy:
-      matrix:
-        package: ['.', 'client', 'mobile']
     steps:
       - uses: actions/checkout@v4
 
@@ -45,36 +42,104 @@ jobs:
           node-version: '24'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Setup and build package
-        run: |
-          cd ${{ matrix.package }}
-          npm ci
-          npm run build --if-present
+      - run: npm ci
+      - run: npm run build --if-present
 
-      - name: Check if version already published
-        id: check-version
+      - name: Sync client version with root
         run: |
-          cd ${{ matrix.package }}
+          ROOT_VERSION=$(node -p "require('./package.json').version")
+          cd client
+          npm version $ROOT_VERSION --no-git-tag-version --allow-same-version
+          cd ..
+
+      - name: Sync mobile version with root
+        run: |
+          ROOT_VERSION=$(node -p "require('./package.json').version")
+          cd mobile
+          npm version $ROOT_VERSION --no-git-tag-version --allow-same-version
+          cd ..
+
+      - name: Check if root version already published
+        id: check-root-version
+        run: |
           PACKAGE_NAME=$(node -p "require('./package.json').name")
           PACKAGE_VERSION=$(node -p "require('./package.json').version")
 
-          echo "Package (${{ matrix.package }}): $PACKAGE_NAME@$PACKAGE_VERSION"
+          echo "Root Package: $PACKAGE_NAME@$PACKAGE_VERSION"
 
           # Check if this version exists on npm
           if npm view "$PACKAGE_NAME@$PACKAGE_VERSION" version 2>/dev/null; then
-            echo "Version $PACKAGE_VERSION already published"
-            echo "should_publish=false" >> $GITHUB_OUTPUT
+            echo "Root version $PACKAGE_VERSION already published"
+            echo "should_publish_root=false" >> $GITHUB_OUTPUT
           else
-            echo "Version $PACKAGE_VERSION not yet published"
-            echo "should_publish=true" >> $GITHUB_OUTPUT
+            echo "Root version $PACKAGE_VERSION not yet published"
+            echo "should_publish_root=true" >> $GITHUB_OUTPUT
           fi
 
-      - name: Publish to npm
-        if: steps.check-version.outputs.should_publish == 'true'
-        run: |
-          cd ${{ matrix.package }}
-          npm publish
+      - name: Publish root to npm
+        if: steps.check-root-version.outputs.should_publish_root == 'true'
+        run: npm publish
 
-      - name: Skip publishing
-        if: steps.check-version.outputs.should_publish == 'false'
-        run: echo "Skipping publish (${{ matrix.package }}) - version already exists on npm"
+      - name: Skip publishing root
+        if: steps.check-root-version.outputs.should_publish_root == 'false'
+        run: echo "Skipping publish root - version already exists on npm"
+
+      - name: Check if client version already published
+        id: check-client-version
+        run: |
+          cd client
+          PACKAGE_NAME=$(node -p "require('./package.json').name")
+          PACKAGE_VERSION=$(node -p "require('./package.json').version")
+
+          echo "Client Package: $PACKAGE_NAME@$PACKAGE_VERSION"
+
+          # Check if this version exists on npm
+          if npm view "$PACKAGE_NAME@$PACKAGE_VERSION" version 2>/dev/null; then
+            echo "Client version $PACKAGE_VERSION already published"
+            echo "should_publish_client=false" >> $GITHUB_OUTPUT
+          else
+            echo "Client version $PACKAGE_VERSION not yet published"
+            echo "should_publish_client=true" >> $GITHUB_OUTPUT
+          fi
+          cd ..
+
+      - name: Publish client to npm
+        if: steps.check-client-version.outputs.should_publish_client == 'true'
+        run: |
+          cd client
+          npm publish
+          cd ..
+
+      - name: Skip publishing client
+        if: steps.check-client-version.outputs.should_publish_client == 'false'
+        run: echo "Skipping publish client - version already exists on npm"
+
+      - name: Check if mobile version already published
+        id: check-mobile-version
+        run: |
+          cd mobile
+          PACKAGE_NAME=$(node -p "require('./package.json').name")
+          PACKAGE_VERSION=$(node -p "require('./package.json').version")
+
+          echo "Mobile Package: $PACKAGE_NAME@$PACKAGE_VERSION"
+
+          # Check if this version exists on npm
+          if npm view "$PACKAGE_NAME@$PACKAGE_VERSION" version 2>/dev/null; then
+            echo "Mobile version $PACKAGE_VERSION already published"
+            echo "should_publish_mobile=false" >> $GITHUB_OUTPUT
+          else
+            echo "Mobile version $PACKAGE_VERSION not yet published"
+            echo "should_publish_mobile=true" >> $GITHUB_OUTPUT
+          fi
+          cd ..
+
+      - name: Publish mobile to npm
+        if: steps.check-mobile-version.outputs.should_publish_mobile == 'true'
+        run: |
+          cd mobile
+          npm publish
+          cd ..
+
+      - name: Skip publishing mobile
+        if: steps.check-mobile-version.outputs.should_publish_mobile == 'false'
+        run: echo "Skipping publish mobile - version already exists on npm"
