--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "description": "BRC100 conforming wallet, wallet storage and wallet signer components",
   "main": "./out/src/index.js",
   "types": "./out/src/index.d.ts",
+  "files": [
+    "out/src/",
+    "docs/",
+    "README.md",
+    "CHANGELOG.md",
+    "license.md"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bsv-blockchain/wallet-toolbox.git"
