--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/bsv-blockchain/wallet-toolbox#readme",
   "dependencies": {
-    "@bsv/sdk": "^1.9.29",
+    "@bsv/sdk": "^2.0.0-beta.0",
     "idb": "^8.0.2"
   }
 }
